# simple-checkout-order-system-be

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
pos/: models.py
pos/fixtures/: categories.json  items.json
pos/migrations/: 0001_initial.py  0002_remove_item_quantity.py
