[tool.poetry]
name = "mashgin-backend"
version = "0.1.0"
description = ""
authors = ["matheuscas <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "djangorestframework"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
