[tool.poetry]
name = "mashgin-backend"
version = "0.1.0"
description = ""
authors = ["matheuscas <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
